; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_pager.c_sqlite3SectorSize.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_pager.c_sqlite3SectorSize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_SECTOR_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sqlite3SectorSize(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @sqlite3OsSectorSize(i32* %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = icmp slt i32 %6, 32
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32 512, i32* %3, align 4
  br label %20

9:                                                ; preds = %1
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @MAX_SECTOR_SIZE, align 4
  %12 = icmp sgt i32 %10, %11
  br i1 %12, label %13, label %19

13:                                               ; preds = %9
  %14 = load i32, i32* @MAX_SECTOR_SIZE, align 4
  %15 = icmp sge i32 %14, 512
  %16 = zext i1 %15 to i32
  %17 = call i32 @assert(i32 %16)
  %18 = load i32, i32* @MAX_SECTOR_SIZE, align 4
  store i32 %18, i32* %3, align 4
  br label %19

19:                                               ; preds = %13, %9
  br label %20

20:                                               ; preds = %19, %8
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i32 @sqlite3OsSectorSize(i32*) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
